--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, picture, source {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -54,20 +54,28 @@ h4 {font-size: 1.5em; margin-bottom: 0.5em;}
 address {margin-bottom: 1em;}
 p {margin-bottom: 1em; font-size: 1.25em; line-height: 1.1;}
 
-header#page-header nav {clear: both; background: #E7E7E8; padding: 1em;}
-header#page-header h1 {background: #fff; margin: 0px; padding: 0px;}
+header#page-header nav {box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);}
+header#page-header nav {clear: both; background: #0c3c7c; font-size: 1.25em;}
+header#page-header nav a {color: #fff; text-decoration: none;}
+header#page-header nav a:hover {color: #f7a81b; border-bottom: 1px solid #f7a81b;}
+header#page-header h1 {background: #fff; margin: 0px; padding: 0px; }
 header#page-header span {visibility: hidden; margin: 0px; padding: 0px;}
-header#page-header ul>li {display: inline; padding-right: 1em;}
+header#page-header ul {padding: 1em;}
+header#page-header ul>li {display: inline; padding-right: 1em; }
 header#page-header ul>li:last-of-type {display: inline; padding-right: 0;}
+header#page-header h1 {padding: 0.5em}
 
 footer#page-footer {clear: both; background-color: #0050a2; color: #fff; padding: 1em;}
 footer#page-footer h1 {color: #fff; font-weight: 700}
-footer#page-footer a {font-weight: bold; color: #fff;}
+footer#page-footer a {font-weight: bold; color: #fff}
 
 main > header {background: #fff; margin-bottom: 1em; padding: 3em 1em;}
 main > section {background: #fff; box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12); margin-bottom: 1em; padding: 1em;}
 main section h2 {color: #019fcb;}
 header.banner {background: url("images/disability-games.jpg") no-repeat; background-size: cover;}
 .main-header-text {color: #fff !important; background-color: rgba(0, 0, 0, 0.75); padding: 1em; }
-.main-header-text h1 {color: #fff;}
-.main-header-text a {color: #fff; font-weight: 700;}
+.main-header-text h1 {color: #fff; font-size: 3.5em;}
+.main-header-text h1 span {color: #f7a81b;}
+.main-header-text a {color: #fff; font-weight: 700; display: block; margin-top: 1em;}
+
+section#meeting-info h3, p {display: inline;}
